--- a/database/categories/A_V_receiver/.meta/config.json
+++ b/database/categories/A_V_receiver/.meta/config.json
@@ -19,8 +19,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "V+",
-                "type": "TEXT"
+                "icon_id": "VOL_UP",
+                "type": "ICON"
             }
         },
         {
@@ -31,8 +31,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "V-",
-                "type": "TEXT"
+                "icon_id": "VOL_DOWN",
+                "type": "ICON"
             }
         },
         {
@@ -55,8 +55,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "Menu",
-                "type": "TEXT"
+                "icon_id": "MENU",
+                "type": "ICON"
             }
         }
     ]
