--- a/database/categories/Air_Purifiers/.meta/config.json
+++ b/database/categories/Air_Purifiers/.meta/config.json
@@ -19,7 +19,7 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "V+",
+                "text": "OSC",
                 "type": "TEXT"
             }
         },
@@ -55,7 +55,7 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "FS-",
+                "text": "SW",
                 "type": "TEXT"
             }
         }
