--- a/database/categories/DVD/.meta/config.json
+++ b/database/categories/DVD/.meta/config.json
@@ -8,8 +8,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "V+",
-                "type": "TEXT"
+                "icon_id": "VOL_UP",
+                "type": "ICON"
             }
         },
         {
@@ -20,8 +20,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "V-",
-                "type": "TEXT"
+                "icon_id": "VOL_DOWN",
+                "type": "ICON"
             }
         },
         {
@@ -44,8 +44,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "EJECT",
-                "type": "TEXT"
+                "icon_id": "EJECT",
+                "type": "ICON"
             }
         }
     ]
