--- a/database/categories/Fan/.meta/config.json
+++ b/database/categories/Fan/.meta/config.json
@@ -19,8 +19,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "WSP",
-                "type": "TEXT"
+                "icon_id": "WIND_SPEED",
+                "type": "ICON"
             }
         },
         {
@@ -31,7 +31,7 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "WSH",
+                "text": "SH",
                 "type": "TEXT"
             }
         },
@@ -43,8 +43,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "MODE",
-                "type": "TEXT"
+                "icon_id": "MODE",
+                "type": "ICON"
             }
         },
         {
@@ -55,8 +55,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "LIGHT",
-                "type": "TEXT"
+                "icon_id": "LIGHT",
+                "type": "ICON"
             }
         },
         {
@@ -91,12 +91,12 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "SP",
-                "type": "TEXT"
+                "icon_id": "WIND_SPEED",
+                "type": "ICON"
             }
         },
         {
-            "message": "Is speed oscillated?",
+            "message": "Is it oscillated?",
             "index": 9,
             "key": "OSCILLATE",
             "data": {
@@ -127,8 +127,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "MODE",
-                "type": "TEXT"
+                "icon_id": "MODE",
+                "type": "ICON"
             }
         },
         {
@@ -139,8 +139,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "T",
-                "type": "TEXT"
+                "icon_id": "TIMER",
+                "type": "ICON"
             }
         },
         {
