--- a/database/categories/Projector/.meta/config.json
+++ b/database/categories/Projector/.meta/config.json
@@ -19,8 +19,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "V+",
-                "type": "TEXT"
+                "icon_id": "VOL_UP",
+                "type": "ICON"
             }
         },
         {
@@ -31,8 +31,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "V-",
-                "type": "TEXT"
+                "icon_id": "VOL_DOWN",
+                "type": "ICON"
             }
         },
         {
@@ -55,8 +55,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "Z+",
-                "type": "TEXT"
+                "icon_id": "ZOOM_IN",
+                "type": "ICON"
             }
         },
         {
@@ -67,8 +67,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "Z-",
-                "type": "TEXT"
+                "icon_id": "ZOOM_OUT",
+                "type": "ICON"
             }
         },
         {
@@ -79,8 +79,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "BR-",
-                "type": "TEXT"
+                "icon_id": "BRIGHT_MORE",
+                "type": "ICON"
             }
         },
         {
@@ -91,8 +91,8 @@
                 "key_id": {
                     "type": "EMPTY"
                 },
-                "text": "BR-",
-                "type": "TEXT"
+                "icon_id": "BRIGHT_LESS",
+                "type": "ICON"
             }
         }
     ]
